TODO, bundled access stats, better coingecko currency support
TODO, bundled access stats, better coingecko currency support

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6963,6 +6963,10 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -Added "Referrer" data for Access Stats (shows what page the visit initiated from, if available)
 
+-Accurate coingecko currency support (currency list is now retrieved from their API)
+
+-Added BUNDLED Access Stats (PER IP ADDRESS stats are also still available)
+
 -Minor user experience improvements / runtime optimizations
 
 -------------------------------------------------------------------
