--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -129,7 +129,16 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 
-For Access Stats, add showing multiple visit timestamps by adding an info balloon when hovering over a 'last visit ' timestamp INFO ICON. 
+Note at top of access stats page, that all times are UTC. Maybe even put a UTC clock on the page, like we do for the logs page.
+
+
+Move /cache/alerts/plugin_alerts/address-balance-tracker/ OVER TO /cache/secured/plugin_data/address-balance-tracker/, AND add in requiring .htaccess / index.php security files (from the templates).
+
+
+Validate the EXACT array size, before parsing ANY data in price chart / access stats data PER-LINE, TO AVOID READING ANY CORRUPT DATA INTO THE OUTPUT STREAMS.
+
+
+For Access Stats, add showing multiple visit timestamps / referrers by adding an info balloon when hovering over a 'last visit ' timestamp INFO ICON. INCLUDE IP ADDRESSES FOR 'ALL STATS' BUNDLED MODE. 
 
 
 Use the 'light charts' algo for stripping out lines with old timestamps in access stats, AND run that logic in the NON-must-be-cron-runtime section of the maintenance routine. This should allow the time period tracked to scale up well, without significantly slowing down runtime speeds (allowing a greater range using the 'access_stats_delete_old' power user setting).
@@ -400,9 +409,6 @@ Add a new mode for the asset perfomance chart (on the 'more stats' modal page), 
 
 
 Add setting upper / lower case auto-correction for the portfolio assets array keys in config-auto-adjust.php.
-
-
-Create the 'ALL STATS' button's features on the access stats page, to switch between listing visits as 'per ip address' (which we have already) OR 'per visit time' (combining all visits into one list, based of visit timestamp).
 
 
 Add remote IP address data to ALL relevant security error logging everywhere in the app.
