--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -132,6 +132,9 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 Validate the EXACT array size, before parsing ANY data in price chart / access stats data PER-LINE, TO AVOID READING ANY CORRUPT DATA INTO THE OUTPUT STREAMS.
 
 
+Make sure we have the FULL nested path to news feed timestamps, in the parameters for sorting news feeds.
+
+
 Look into including the asset name in parentheses after the ticker, ONLY WHEN A TICKER IS LESS THAN 2 CHARACTERS, in price alert comm messages. This should help to quickly identify assets in alerts, especially if it's a notifyme Alexa alert.
 
 
