--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -129,13 +129,16 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 
-Do input validation for btc / crypto preferred markets, on the currency admin page. Also add the exchange keys list to each tooltip area.
+At some point, put together a list of things to test, when package testing right before public release. 
 
 
-Move /cache/alerts/plugin_alerts/address-balance-tracker/ OVER TO /cache/secured/plugin_data/address-balance-tracker/, AND add in requiring .htaccess / index.php security files (from the templates).
+Leverage should be switched to a slider in the user interface, whenever we add decimal support. We also should create a custom js listener, that still runs our "batshit crazy" js alerts. :)
 
 
-Validate the EXACT array size, before parsing ANY data in price chart / access stats data PER-LINE, TO AVOID READING ANY CORRUPT DATA INTO THE OUTPUT STREAMS.
+For the 'margin leverage maximum' power user setting, add decimal support (in the admin interface too), as modern perp markets on Solana allow this.
+
+
+News feed XML errors should be saved to /cache/logs/debug/xml_error_parsing/, instead of /cache/other/xml_error_parsing/.
 
 
 For Access Stats, add showing multiple visit timestamps / referrers by adding an info balloon when hovering over a 'last visit ' timestamp INFO ICON. INCLUDE IP ADDRESSES FOR 'ALL STATS' BUNDLED MODE. 
@@ -154,15 +157,6 @@ All STALE charts (light AND archival) that no longer have any corresponding char
 
 
 REDO all screenshots, used on the project page.
-
-
-For the 'margin leverage maximum' power user setting, add decimal support (in the admin interface too), as modern perp markets on Solana allow this.
-
-
-News feed XML errors should be saved to /cache/logs/debug/xml_error_parsing/, instead of /cache/other/xml_error_parsing/.
-
-
-For the 'address balance tracker' plugin, look into requiring ANY 'sol' pairing (instead of insisting it's a jupiter market 'sol' pairing), to automatically list it in the interface.
 
 
 When importing bootstrap price chart data in on XAMMP for Windows, WHEN SETUP FOR 15 MINUTE TASK SCHEDULER INTERVALS INSTEAD OF THE DEFAULT 20 MINUTE INTERVALS, all chart data seemed correct EXCEPT for 2 week data. Try and replicate this on other setups, and review the auto-reset trigger / directory deletion logic for any possible issues, as well as the light chart creation logic. I SUSPECT THE LATTER. 
