--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -132,7 +132,10 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 At some point, put together a list of things to test, when package testing right before public release. 
 
 
-For all comm channel settings, and the ability to mix-and-match whatever comms you want, instead of the current 'all or only one' structure. This will need a check boxes rendering function, for the admin interfacing too.
+Refactor / move as much API throttling into developer-config.php, and replace the throttle configs already in that file (with a simpler structure).
+
+
+For all comm channel settings, and the ability to mix-and-match whatever comms you want, instead of the current 'all or only one' structure. This can be done by formating like price alerts / charts, and putting into a trimmed array in config-auto-adjust.php. Then we can create in_array() conditions, for queueing messages, for whatever comm channels are preffered.
 
 
 Leverage should be switched to a slider in the user interface, whenever we add decimal support. We also should create a custom js listener, that still runs our "batshit crazy" js alerts. :)
