--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6979,6 +6979,16 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 
 
+-------------------------------------------------------------------
+6.01.05
+
+-BUG FIX: TBD
+
+-------------------------------------------------------------------
+
+
+
+
 
 
 
