--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6982,7 +6982,7 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 -------------------------------------------------------------------
 6.01.05
 
--BUG FIX: TBD
+-BUG FIX: Fixed occasional blanked out screen in user area, due to lack of data set checks, before data parsing within coingecko's available currencies list
 
 -------------------------------------------------------------------
 
