--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6994,6 +6994,15 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 
 
+-------------------------------------------------------------------
+6.01.06
+
+-BUG FIX: Fixed error "No...data received...file /cache/secured/a*********s/ip_XX*********X.dat (aborting...)", originating in prune_access_stats() (called during scheduled maintenance), which occurred when no stats remained AFTER PRUNING any outdated access stats (the stats file is properly deleted now). You can safely ignore past error logging that looks like this. Sorry!
+
+-------------------------------------------------------------------
+
+
+
 
 
 
