--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6999,6 +6999,8 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Fixed error "No...data received...file /cache/secured/a*********s/ip_XX*********X.dat (aborting...)", originating in prune_access_stats() (called during scheduled maintenance), which occurred when no stats remained AFTER PRUNING any outdated access stats (the stats file is properly deleted now). You can safely ignore past error logging that looks like this. Sorry!
 
+-BUG FIX: Fixed edge-cases where updating the CACHED application configuration could FAIL (any updates now initiate a 1 second pause AFTER, so any file locks release, in case a second update needs to happen during the same runtime)
+
 -BUG FIX: Miscellaneous (minor)
 
 -Safety checks for importing config backups (with version states saved to default / cached configs)
