--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -132,7 +132,7 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 Backup the GitHub project website (forgot to).
 
 
-We've only tested when no 'version states' exist yet. Next, we need to test upgrade and downgrade flagging. Note that we previously have set a bunch of upgrade-related code at the bottom of plugins-init.php as well, BUT we run the new plugin 'version states' logic AFTER that code. Make sure that's ok.
+We've only tested when no 'version states' exist yet. Next, we need to test upgrade and downgrade flagging. We need to revise setting-reset-config.php AND plugin-setting-reset-config.php logic / placement to include 'version state' checks in imported configs. WE NEED TO PRIORITIZE 'VERSION STATE' CONFIG IMPORT CHECKS OVER APP UPGRADE CHECKS, AS WE ARE ALWAYS JUST UPGRADING THE CACHED CONFIG ANYWAY, AND WE WANT TO ASSURE VERSIONS ARE INCLUDED IN THE CACHED CONFIG (BUT MAKE SURE OUR SEPERATE VERSION CACHE FILES FOR APP / PLUGIN UPGRADES STILL UPDATED AS NEEDED).
 
 
 Make sure the original upgrade logic still works for APP UPGRADES / DOWNGRADES (now that we have integrated 'version states' tracking for safe config importing checks / upgrading).
