--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -7007,7 +7007,7 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Miscellaneous (minor)
 
--Safety checks for importing config backups (with version states bound to default / cached configs)
+-Overhauled upgrade system, that now includes importing config backups (safely)
 
 -Minor user experience improvements
 
